--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(article) do |f| %>
+<%= form_for(article, enctype:'multipart/form-data') do |f| %>
   <% if article.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
@@ -11,6 +11,7 @@
     </div>
   <% end %>
 
+
   <div class="field">
     <%= f.label :title %>
     <%= f.text_field :title %>
@@ -21,6 +22,11 @@
     <%= f.text_area :text %>
   </div>
 
+  <div class="field">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
