--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,14 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
+<h1>
   <%= @article.title %>
+<h1>
 </p>
 
+<%= image_tag(@article.image.url) %>
+
 <p>
-  <strong>Text:</strong>
   <%= @article.text %>
 </p>
+
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
